@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:py="http://genshi.edgewall.org/">
+<html xmlns:py="http://genshi.edgewall.org/" xmlns:i18n="http://genshi.edgewall.org/i18n">
     <head>
         <title>Reset Password</title>
     </head>
@@ -7,15 +7,19 @@
         <div style="display: block; text-align: center">
             <div>
                 <h1>Reset Password</h1>
-                <p>The password for your account, <strong>${record.login}</strong>, has been reset.<br/>
+                <p i18n:msg="login,password,host,database,host,database">
+                The password for your account, <strong>${record.login}</strong>, has been reset.<br/>
                 You must set a new one from the user's preferences.<br/>
-                You can connect with this temporary password <strong>${record.password_reset}</strong> to</p>
+                You can connect with this temporary password <strong>${record.password_reset}</strong> to<br/>
                 <a href="tryton://${host}/${database}">tryton://${host}/${database}</a><br/>
-                <a href="${http_host}/#${database}">${http_host}/#${database}</a><br/>
+                <a href="${http_host}/#${database}">${http_host}/#${database}</a>
+                </p>
             </div>
             <hr style="margin-top: 20px; border-style: solid none none; border-color: #EEE"></hr>
             <div style="font-size: 80%; color: #777">
-                <p>The password will expire at <time datetime="${record.password_reset_expire.isoformat()}">${expire} UTC</time>.</p>
+                <p i18n:msg="datetime">
+                The password will expire at <time datetime="${record.password_reset_expire.isoformat()}">${expire} UTC</time>.
+                </p>
             </div>
         </div>
     </body>
