@@ -1,3 +1,5 @@
+* Cache in memory the report template instances
+* Support Genshi's MsgDirective in report
 * Support PYSON comparison of date and datetime
 * Add cron task to clean old queue tasks
 * Add option to run cron once
